data/all_generated_tests/raw_wast_tests/loop_TypeMismatchinControlFlowInstructions_995.wast
;; 6. **Controlled Stack Winding with Mismatching Types**:    - A loop where the operand stack is emptied and refilled with a type mismatch during execution and re-entry.    - Tests stack unwinding and rewinding behavior matching types accurately.    - Specific Constraint: Ensuring type consistency during stack unwinding and re-population in a loop body.

(assert_invalid
  (module (func $stack_unwind_rewind_type_mismatch
    (block (result i32)
      (i32.const 3)
      (loop (result i32)
        (i32.popcnt)
        (br 0)
      )
    )
  ))
  "type mismatch"
)